[tool.poetry]
name = "explore-or"
version = "0.1.0"
description = ""
authors = ["Shivam Gupta <shivam.gupta01@gojek.com>"]
readme = "README.md"
packages = [{include = "explore_or"}]

[tool.poetry.dependencies]
python = "^3.9"
ortools = "^9.7.2996"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

